# validator

./: .gitignore  .pre-commit-config.yaml  Readme.md  app.py  example.py  pyproject.toml
starterkit/: __init__.py
starterkit/dto/: user.py
starterkit/observer/: __init__.py
starterkit/service/: __init__.py  user.py
starterkit/validator/: __init__.py  user.py
tests/: conftest.py  observer_test.py  validator_test.py
tests/assets/: users.json
validator/adapter/: __init__.py
validator/dto/: user.py
validator/observer/: __init__.py
validator/service/: __init__.py  user.py
validator/validation/: __init__.py  user.py
